# sft-dev

./: AUDIT_REPORT.md  CITATION.cff  IMPLEMENTATION_PLAN.md  LICENSE  MASTER.md  README.md  agent.md  dark_baryon.py  dark_ckm.py  new_force_running.py  particle_validation.py  pyproject.toml  specification.md
book/: BOOK_PLAN.md  BOOK_UPDATE_PLAN.md  REPETITION_WATCH.md  THE_ONE_AND_THE_FOLD.md
dev_docs/: academic_finalisation_plan.md  implementation_plan.md  task.md  walkthrough.md
frontier/: DARK_CKM.md  DARK_HADRONS.md  FORCED_CENSUS.md  FORCING_THE_AXIOM.md  JOINT_A_ENUMERATION.md  JOINT_B_GENERATORS.md  NEW_FORCE_RUNNING.md  THEOREM_THE_FORCED_AXIOM.md  THE_ORACLE_READING.md
papers/: Makefile  fundamental_constants.tex  primitives_of_action.tex  references.bib
secondary_investigation/: ai_consciousness_findings.md  ai_consciousness_verifier.py  arrow_of_time.py  arrow_of_time_findings.md  black_hole_information.py  black_hole_information_findings.md  chaotic_divergence.py  chess_fold_analysis.py  chess_fold_findings.md  collatz_fold_analysis.py  collatz_fold_findings.md  consciousness_and_qualia_investigations.md  consciousness_indestructibility.py  consciousness_indestructibility_findings.md  consciousness_matter_coupling.py  consciousness_matter_coupling_findings.md  demon_topological_stabilization.py  demon_topological_stabilization_findings.md  discover_corpus_derivations.py  discover_fifth_force.py  discover_gravity_em_relation.py  fifth_force_findings.md  fine_structure_analysis.md  fine_structure_constant.py  fold_completeness.py  halting_analyzer.py  (+92 more)
(+27 files in other folders)
