[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sftoe"
version = "0.1.0"
description = "Smithian Fold Theory of Everything mathematical library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Smithian Fold Team"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["sftoe*"]
